# fig

./: .dir-locals.el  .gitignore  README.org  cabal.project  fig-ads.el  fig-advent.el  fig-bible.el  fig-bless.el  fig-bloodsport.el  fig-breed.el  fig-bullfrog.el  fig-clone.el  fig-cloud.el  fig-curse.el  fig-database.el  fig-db2.el  fig-emotes.el  fig-fakechat.el  fig-friend.el  fig-gamba.el  fig-gcp.el  fig-gdq.el  fig-geiser.el  fig-genealogy-data.el  fig-kanban.el  fig-mansion.el  fig-model.el  fig-network.el  fig-newspaper.el  fig-obs.el  fig-pronunciation.el  fig-pumpkin.el  fig-rpg.el  fig-semi.el  fig-speedrun.el  fig-thanks.el  fig-twitch.el  fig-utils.el  fig-uwoomfie.el  fig-voice.el  (+6 more)
assets/: jetsWave.txt
assets/emotes/: 1112293  1172572  1279975  146272  1480140  1510226  151387  1580537  1598562  1680218  168432  1753160  181811  1896252  1938465  1944784  198081  2076837  299712  300086928  300093858  300093966  300160991  300352343  300354435  300603032  300926727  300970702  301108013  301108048  301108057  301206698  301255250  301261624  301360929  301363803  301382691  301396373  301457506  301468708  (+1980 more)
assets/newspaper/: template.tex
contrib/: bezelea-muzak-old.el  bezelea-muzak.el  prod-bless-srfi.el
database/: 000008  1000needlesss  2theMAXtheStairFax  37LN37  3rdPT  3ucalipto  4ll4m3nts  50K3N  51megamind  5gtechnician  666PVZUZU666  6HornTaurus  7ijme  8InfinityTaco8  ABipolarCarp123  ABuffSeagull  ASPARTAME21  ASleepyDork  AbigailCrocM  Aby3  AcePCaswell  Acid_Spark  Acorn1010  AdamLearnsLive  AdoHTQ  AerekYasa  AestheticArepa  Aguscarar  AlbertMornVT  AlbinoMoose308  Alcuinor  AlexanTonyh  AlexejheroDev  AlicaVenris  AllTheWaifuReferences  AltoVT  AndrogynousBug  AnicSR  AnnMWhite  Anonymously001  (+1146 more)
emotes/: 1035663  1048688  1049095  112293  1127135  116751  119265  134251  17918  18028  1896195  1970120  300093852  300352352  300499653  300658295  300704056  300739855  301018100  301108037  301108046  301108083  301261600  301261614  301283212  301396382  301396388  301396453  301403899  301461632  301468146  301476872  301509547  301544927  301590972  301602034  301661126  301665781  301703755  301788770  (+1503 more)
fig-bless/: fig-bless.cabal
fig-bless/main/: Main.hs
fig-bless/src/Fig/: Bless.hs
fig-bless/src/Fig/Bless/: Builtins.hs  Runtime.hs  Syntax.hs  TypeChecker.hs  Types.hs
fig-bridge-irc-discord/: fig-bridge-irc-discord.cabal
fig-bridge-irc-discord/main/: Main.hs
fig-bridge-irc-discord/src/Fig/Bridge/: IRCDiscord.hs
fig-bridge-irc-discord/src/Fig/Bridge/IRCDiscord/: Utils.hs
fig-bus/: fig-bus.cabal
fig-bus/main/: Main.hs
fig-bus/src/Fig/: Bus.hs
fig-bus/src/Fig/Bus/: Binary.hs  Client.hs  SExp.hs  SExpr.hs
fig-bus/src/Fig/Bus/Binary/: Client.hs  Utils.hs
fig-bus/src/Fig/Bus/SExp/: Client.hs
fig-bus/src/Fig/Bus/SExpr/: Client.hs
fig-cli/: fig-cli.cabal
fig-cli/main/: Main.hs
fig-cli/src/Fig/: CLI.hs
fig-emulator-gb/: fig-emulator-gb.cabal
fig-emulator-gb/main/: Main.hs
fig-emulator-gb/src/Fig/Emulator/: GB.hs
fig-emulator-gb/src/Fig/Emulator/GB/: Bus.hs  CPU.hs  Utils.hs
fig-emulator-gb/src/Fig/Emulator/GB/CPU/: Instruction.hs
fig-emulator-gb/src/Fig/Emulator/GB/Component/: Interrupt.hs  Joystick.hs  Misc.hs  RAM.hs  ROM.hs  Serial.hs  Video.hs
fig-emulator-gb/src/Fig/Emulator/GB/Test/: Instr.hs
fig-frontend/: fig-frontend.cabal
fig-frontend-client/: .gitignore  Makefile  config-deploy.m4  config-extension.js  config-test.m4  deploy.sh  index-template.html  index.html  main.css  main.js
fig-frontend-client/extension/: background.js  manifest.dhall
fig-frontend-client/src/: Audio.js  Audio.purs  Auth.js  Auth.purs  Config.js  Config.purs  Main.purs  Model.js  Model.purs  UI.js  UI.purs
fig-frontend-client/templates/: index.html  obs.html
fig-frontend/client/: package-lock.json  package.json  tsconfig.json
fig-frontend/client/src/: config.ts  index.css  index.ts  state.ts  twitch.ts
fig-frontend/client/src/components/: backdrop.ts  footer.ts  gizmo.ts  header.ts  login.ts  window.ts
fig-frontend/main/: Main.hs
fig-frontend/src/Fig/: Frontend.hs
fig-frontend/src/Fig/Frontend/: Auth.hs  DB.hs  State.hs  Utils.hs
fig-monitor-bullfrog/: fig-monitor-bullfrog.cabal
fig-monitor-bullfrog/main/: Main.hs
fig-monitor-bullfrog/src/Fig/Monitor/: Bullfrog.hs
fig-monitor-bullfrog/src/Fig/Monitor/Bullfrog/: Utils.hs
fig-monitor-discord/: fig-monitor-discord.cabal
fig-monitor-discord/main/: Main.hs
fig-monitor-discord/src/Fig/Monitor/: Discord.hs
fig-monitor-discord/src/Fig/Monitor/Discord/: Utils.hs
fig-monitor-irc/: fig-monitor-irc.cabal
fig-monitor-irc/main/: Main.hs
fig-monitor-irc/src/Fig/Monitor/: IRC.hs
fig-monitor-irc/src/Fig/Monitor/IRC/: Utils.hs
fig-monitor-twitch/: fig-monitor-twitch.cabal
fig-monitor-twitch/main/: Main.hs
fig-monitor-twitch/src/Fig/Monitor/: Twitch.hs
fig-monitor-twitch/src/Fig/Monitor/Twitch/: Chatbot.hs  EventMonitor.hs  LiveChecker.hs  Utils.hs
fig-monitor-twitch/src/Fig/Monitor/Twitch/Auth/: AppToken.hs  UserToken.hs
fig-utils/: fig-utils.cabal
fig-utils/csrc/: fig.c
fig-utils/src/Fig/: Prelude.hs  Utils.hs
fig-utils/src/Fig/Utils/: DB.hs  FFI.hs  Net.hs  SExpr.hs
fig-web/: fig-web.cabal
fig-web/main/: Main.hs
fig-web/src/Fig/: Web.hs
fig-web/src/Fig/Web/: Auth.hs  DB.hs  Exchange.hs  LDAP.hs  MaudeCode.hs  Public.hs  Secure.hs  State.hs  Types.hs  Utils.hs
fig-web/src/Fig/Web/Module/: Advent.hs  Bells.hs  Circle.hs  Claim.hs  Debt.hs  Exchange.hs  Gizmo.hs  HLS.hs  Misc.hs  Model.hs  Puzzle.hs  Redeem.hs  Sentiment.hs  Shader.hs  ShindigsSorting.hs  TCG.hs  TwitchAuth.hs  User.hs
newspaper/: newspaper-mod.sty  template.tex
src/: fig-chat.el  fig-db2.el  fig-emotes.el  fig-model.el  fig-network.el  fig-twitch.el  fig-utils.el  fig-voice.el  fig.el  load.el
src/archive/: fig-ads.el  fig-baldur.el  fig-breed.el  fig-fusion.el  fig-gl.el  fig-jurisprudence.el  fig-piano.el
src/contrib/: bezelea-muzak.el
src/gizmo/: fig-bible.el  fig-clone.el  fig-copfish.el  fig-fakechat.el  fig-friend.el  fig-gcp.el  (+9 more)
(+1 files in other folders)
