cabal-version: 3.4
name: fig-bless
version: 0.1.0.0

common defaults
  ghc-options: -Wall
  default-language: GHC2021
  default-extensions: NoImplicitPrelude PackageImports LambdaCase MultiWayIf OverloadedStrings OverloadedLists OverloadedRecordDot DuplicateRecordFields RecordWildCards NoFieldSelectors BlockArguments ViewPatterns TypeFamilies DataKinds GADTs

common deps
  build-depends:
      base
    , aeson
    , base64
    , binary
    , bytestring
    , containers
    , data-default-class
    , directory
    , errors
    , filepath
    , http-types
    , http-client
    , http-client-tls
    , lens
    , megaparsec
    , mtl
    , req
    , safe-exceptions
    , text
    , time
    , tomland
    , transformers
    , unordered-containers
    , vector
    , fig-utils
    , fig-bus

library
  import: defaults
  import: deps
  hs-source-dirs: src
  exposed-modules:
    Fig.Bless
    Fig.Bless.Syntax
    Fig.Bless.Types
    Fig.Bless.TypeChecker
    Fig.Bless.Runtime
    Fig.Bless.Builtins

executable fig-bless
  import: defaults
  import: deps
  build-depends: fig-bless, optparse-applicative
  hs-source-dirs:
    main
  main-is: Main.hs
