cabal-version: 3.4
name: fig-bridge-irc-discord
version: 0.1.0.0

common defaults
  ghc-options: -Wall
  default-language: GHC2021
  default-extensions: NoImplicitPrelude PackageImports LambdaCase MultiWayIf OverloadedStrings OverloadedLists OverloadedRecordDot DuplicateRecordFields RecordWildCards NoFieldSelectors BlockArguments ViewPatterns TypeFamilies DataKinds GADTs

common deps
  build-depends:
      base
    , aeson
    , base64
    , binary
    , bytestring
    , containers
    , data-default-class
    , directory
    , filepath
    , megaparsec
    , mtl
    , network
    , safe-exceptions
    , text
    , time
    , tomland
    , transformers
    , unordered-containers
    , vector
    , fig-utils
    , fig-bus

library
  import: defaults
  import: deps
  hs-source-dirs: src
  exposed-modules:
    Fig.Bridge.IRCDiscord

executable fig-bridge-irc-discord
  import: defaults
  import: deps
  build-depends: fig-bridge-irc-discord, optparse-applicative
  hs-source-dirs:
    main
  main-is: Main.hs