cabal-version: 3.4
name: fig-bus
version: 0.1.0.0

common defaults
  ghc-options: -Wall
  default-language: GHC2021
  default-extensions: NoImplicitPrelude PackageImports LambdaCase MultiWayIf OverloadedStrings OverloadedLists OverloadedRecordDot DuplicateRecordFields RecordWildCards NoFieldSelectors BlockArguments ViewPatterns TypeFamilies DataKinds GADTs

common deps
  build-depends:
      base
    , async
    , binary
    , bytestring
    , containers
    , directory
    , filepath
    , megaparsec
    , mtl
    , network
    , safe-exceptions
    , text
    , time
    , transformers
    , unordered-containers
    , vector
    , fig-utils

library
  import: defaults
  import: deps
  hs-source-dirs: src
  exposed-modules:
    Fig.Bus
    Fig.Bus.Client

executable fig-bus
  import: defaults
  import: deps
  build-depends: fig-bus, optparse-applicative
  hs-source-dirs:
    main
  main-is: Main.hs
