cabal-version: 3.4
name: fig-cli
version: 0.1.0.0

common defaults
  ghc-options: -Wall
  default-language: GHC2021
  default-extensions: NoImplicitPrelude PackageImports LambdaCase MultiWayIf OverloadedStrings OverloadedLists OverloadedRecordDot DuplicateRecordFields RecordWildCards NoFieldSelectors BlockArguments ViewPatterns TypeFamilies DataKinds GADTs

common deps
  build-depends:
      base
    , aeson
    , base64
    , binary
    , bytestring
    , containers
    , data-default-class
    , directory
    , errors
    , filepath
    , hedis
    , http-types
    , http-client
    , http-client-tls
    , lens
    , megaparsec
    , mtl
    , network
    , optparse-applicative
    , process
    , random
    , req
    , safe-exceptions
    , text
    , time
    , tomland
    , transformers
    , unordered-containers
    , uuid
    , vector
    , fig-utils
    , fig-bus

library
  import: defaults
  import: deps
  hs-source-dirs: src
  exposed-modules:
    Fig.CLI

executable fig-cli
  import: defaults
  import: deps
  build-depends: fig-cli, optparse-applicative
  hs-source-dirs:
    main
  main-is: Main.hs
