cabal-version: 3.4
name: fig-monitor-irc
version: 0.1.0.0

common defaults
  ghc-options: -Wall
  default-language: GHC2021
  default-extensions: NoImplicitPrelude PackageImports LambdaCase MultiWayIf OverloadedStrings OverloadedLists OverloadedRecordDot DuplicateRecordFields RecordWildCards NoFieldSelectors BlockArguments ViewPatterns TypeFamilies DataKinds GADTs

common deps
  build-depends:
      base
    , aeson
    , base64
    , binary
    , bytestring
    , containers
    , data-default-class
    , directory
    , filepath
    , irc-client
    , megaparsec
    , microlens
    , mtl
    , network
    , safe-exceptions
    , text
    , time
    , tomland
    , transformers
    , unordered-containers
    , vector
    , fig-utils
    , fig-bus

library
  import: defaults
  import: deps
  hs-source-dirs: src
  exposed-modules:
    Fig.Monitor.IRC
    Fig.Monitor.IRC.Utils

executable fig-monitor-irc
  import: defaults
  import: deps
  build-depends: fig-monitor-irc, optparse-applicative
  hs-source-dirs:
    main
  main-is: Main.hs