cabal-version: 3.4
name: fig-monitor-twitch
version: 0.1.0.0

common defaults
  ghc-options: -Wall
  default-language: GHC2021
  default-extensions: NoImplicitPrelude PackageImports LambdaCase MultiWayIf OverloadedStrings OverloadedLists OverloadedRecordDot DuplicateRecordFields RecordWildCards NoFieldSelectors BlockArguments ViewPatterns TypeFamilies DataKinds GADTs

common deps
  build-depends:
      base
    , aeson
    , base64
    , binary
    , bytestring
    , containers
    , data-default-class
    , directory
    , filepath
    , http-types
    , http-client
    , http-client-tls
    , megaparsec
    , mtl
    , network
    , safe-exceptions
    , scotty
    , text
    , time
    , tomland
    , transformers
    , unordered-containers
    , vector
    , warp
    , websockets
    , wuss
    , fig-utils
    , fig-bus

library
  import: defaults
  import: deps
  hs-source-dirs: src
  exposed-modules:
    Fig.Monitor.Twitch
    Fig.Monitor.Twitch.Utils
    -- Fig.Monitor.Twitch.Chat
    -- Fig.Monitor.Twitch.EventSub
    -- Fig.Monitor.Twitch.UserTokenRedirectServer

executable fig-monitor-twitch
  import: defaults
  import: deps
  build-depends: fig-monitor-twitch, optparse-applicative
  hs-source-dirs:
    main
  main-is: Main.hs