cabal-version: 3.4
name: fig-web
version: 0.1.0.0

common defaults
  ghc-options: -Wall
  default-language: GHC2021
  default-extensions: NoImplicitPrelude PackageImports LambdaCase MultiWayIf OverloadedStrings OverloadedLists OverloadedRecordDot DuplicateRecordFields RecordWildCards NoFieldSelectors BlockArguments ViewPatterns TypeFamilies DataKinds GADTs

common deps
  build-depends:
      base
    , aeson
    , base64
    , binary
    , bytestring
    , containers
    , data-default-class
    , directory
    , errors
    , filepath
    , hedis
    , http-types
    , http-client
    , http-client-tls
    , jose-jwt
    , lens
    , lucid2
    , megaparsec
    , mtl
    , network
    , process
    , random
    , req
    , safe-exceptions
    , scotty
    , text
    , time
    , tomland
    , transformers
    , unordered-containers
    , uuid
    , vector
    , wai
    , wai-extra
    , wai-middleware-static
    , wai-websockets
    , warp
    , websockets
    , wuss
    , xss-sanitize
    , fig-utils
    , fig-bus

library
  import: defaults
  import: deps
  hs-source-dirs: src
  exposed-modules:
    Fig.Web.Utils
    Fig.Web.Types
    Fig.Web.Auth
    Fig.Web.DB
    Fig.Web.Public
    Fig.Web.Secure
    Fig.Web.Module.Misc
    Fig.Web.Module.TwitchAuth
    Fig.Web.Module.Exchange
    Fig.Web.Module.Gizmo
    Fig.Web.Module.Sentiment
    Fig.Web.Module.Circle
    Fig.Web.Module.Model
    Fig.Web.Module.Bells
    Fig.Web.Module.User
    Fig.Web.Module.Shader
    Fig.Web.Module.Redeem
    Fig.Web.Module.Advent
    Fig.Web.Module.HLS
    Fig.Web.Module.TCG
    Fig.Web.Module.Debt
    Fig.Web.Module.ShindigsSorting

executable fig-web
  import: defaults
  import: deps
  build-depends: fig-web, optparse-applicative
  hs-source-dirs:
    main
  main-is: Main.hs
